Changelog:
==========

????-??-?? - 1.50.1
	Fixed DLNAResource cloning problem (#1274)
	Added renderer configuration file for Philips TV (thanks, leroy!)
	Fixed bug in RootFolder (#1243)
	Improved child discovery for the root folder
	Enhanced network interface handling (#659)
	Updated MPlayer and MEncoder revisions to SB19
	Fixed bug in Navigation Share tab
	Added Solaris specific ping command (#1277)
	Fixed problem parsing framerates with comma (#1278)
	Fixed bug in AVCHeader scanner
	Fixed broken MEncoder playback on empty custom settings 
	Updated Sony Bravia EX configuration
	Fixed timeshift audio sync problem with tsMuxeR (thanks ExSport!)
	Added option to disable/enable DTS passthrough in video settings folder
	Updated Samsung AllShare configuration to recognize newest firmware
	Added support for WDHD Live and AirAv app (thanks, ehM.Deee!)
	Migrated PMS source to GitHub (https://github.com/ps3mediaserver/ps3mediaserver)
	Added commit information
	Added subtitle HTTP header support for SamsungAllShare (thanks, SamiMakinen!)

2011-11-20 - 1.50.0

	Backwards-incompatible API changes (for plugin developers/packagers) - see http://tinyurl.com/3qtgk5k for more details
	Updated binaries build script to include Linux support (thanks, happy.neko!)
	Updated OS X MPlayer to include fontconfig support
	Language updates:
		Updated Bulgarian translation (thanks, JORDITO!)
		Updated German translation (thanks, smo!)
		Updated Dutch translation
		Clarified English language labels
		Speeds displayed in Mb/s instead of Kb/s
	Added full featured IP filter with support for wildcards and ranges
	Improved network interface choosing algorithm now skips virtual interfaces
	Updated libraries (configuration, jgoodies and slf4j)
	Detect file system changes runtime (adding/removing folders/files).
	Updated JRE auto-download from 6u27 to 7u1
	Added option to create a desktop shortcut to the Windows installer
	Renderer image improvements
	Improvements to tab layouts