@@ -180,6 +180,9 @@ PMS.36=HD Videos
 PMS.37=\#- Video Settings -\#
 PMS.39=SD Videos
 PMS.41=(Re)installing Win32 service
+PMS.42=\#- Computer Shutdown -\#
+PMS.43=Shutdown
+PMS.44=Restart
 PMS.130=Searching for renderers...
 ProfileChooser.1=PS3 Media Server Profile Chooser
 ProfileChooser.2=Select
